[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "devpanel"
version = "1.1.0-dev"
description = "Lightweight Linux Dev Companion TUI"
authors = [{name = "Varun Sukumar K", email = "varunsukumar060@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "textual>=0.52.0",
    "psutil>=5.9.0",
]

[project.scripts]
devpanel = "devpanel:main"

[project.urls]
Homepage = "https://github.com/varunsukumar060/devpanel"
